[project]
name = "sugar-glider"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "colorcet>=3.1.0",
    "fastapi>=0.135.3",
    "httpx>=0.28.1",
    "nilearn>=0.11.0",
    "pillow>=11.0.0",
    "plotly>=5.24.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.22",
    "seaborn>=0.13.2",
    "streamlit>=1.40.0",
    "streamlit-shadcn-ui>=0.1.19",
    "tribev2",
    "uvicorn>=0.43.0",
]

[tool.uv.sources]
tribev2 = { git = "https://github.com/facebookresearch/tribev2" }
